--- a/src/Prueba TP/static/css/style.css
+++ b/src/Prueba TP/static/css/style.css
@@ -34,7 +34,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Noto Serif", sans-serif;
 }
 @keyframes shaking {
   0% {
@@ -51,65 +50,6 @@
   }
   100% {
     transform: translate(0, 0) rotate(0deg);
-  }
-}
-
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.2);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-@keyframes animLogo {
-  from {
-    -webkit-transform: rotate(0deg);
-    transform: rotateY(0deg);
-  }
-  50% {
-    -webkit-transform: rotate(180deg);
-    transform: rotateY(180deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    transform: rotateY(360deg);
-  }
-}
-
-@keyframes bouncing {
-  0%,
-  100% {
-    transform: translateY(0);
-    animation-timing-function: ease-in;
-  }
-  50% {
-    transform: translateY(-100px);
-    animation-timing-function: ease-out;
-  }
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes scaleAndColorChange {
-  0% {
-    transform: scale(1);
-    background-color: blue;
-  }
-  100% {
-    transform: scale(2);
-    background-color: green;
   }
 }
 
@@ -150,91 +90,75 @@
 ::-webkit-scrollbar-thumb:hover {
   background: var(--GradienteBlancoCeleste);
 }
-body {
-  background-color: var(--bg-color);
-  color: var(--primary-font);
 
-  scrollbar-width: thin;
+a {
+  text-decoration: none;
 }
 
-/*ESTILOS HEADER PARA ESCRITORIO*/
+
+
+
+
+
+#logo {
+  font-weight: bold;
+}
+
+body {
+  background-color: var(--bg-color);
+  font-family: "Noto Serif", sans-serif;
+}
+
+.scrolled {
+  background-color: var(--third-color);
+}
+
+#banner {
+  background-image: url("../img/argentina-world.jpg");
+
+  background-size: cover;
+  background-position: top;
+  height: 100vh;
+  box-shadow: inset 0 0 0 2000px rgba(84, 84, 84, 0.5);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
 .header {
-  
   background: var(--GradienteBlancoCeleste);
   color: #ffffff;
-  height: 15vhd;
-  position: sticky;
+  position: fixed;
   top: 0;
-  z-index: 10;
-  .navegacion {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 40px;
-    margin-right: 40px;
-    padding: 1rem;
-    .logoC {
-      text-decoration: none;
-      color: var(--primary-font);
-      font-weight: bold;
-      font-size: 1.2rem;
-      /*animacion hover*/
-      &:hover {
-        animation: heartbeat 2s infinite alternate;
-      }
-    }
-    .listaNav {
-      list-style: none;
-      display: flex;
-      justify-content: right;
-      align-items: center;
-      .listaItem {
-        padding: 0.4rem;
-        margin-right: 2rem;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+}
 
-        .linkNav {
-          text-decoration: none;
-          color: var(--primary-font);
-          font-weight: bold;
-          font-size: 0.9rem;
-          padding: 0.5rem 0.5rem;
-          /* Agregar efecto de botón presionado */
-          transition: transform 0.3s, box-shadow 0.3s;
-          &:hover {
-            transform: scale(0.95);
-            box-shadow: 0 0 10px rgba(0, 0, 0, 1);
-            border-radius: 5px;
-          }
-        }
-        .linkNav.Login {
-          background-color: var(--azulClaro);
-          color: white;
-          border-radius: 5px;
-          padding-inline: 2rem;
-          transition: transform 0.3s, box-shadow 0.3s;
-          &:hover {
-            background-color: var(--celeste);
-          }
-        }
-      }
-    }
-  }
+
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .header ul li .dropdown-content {
   position: absolute;
   z-index: 2;
 
-  top: 3.1rem;
-  right: 0.4rem;
+  top: 3.2rem;
+  right: 0.1rem;
   transition: all 0.5s;
 
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 
+  /* display: block; con eso hace lo mismo */
   opacity: 0;
   background: var(--GradienteCelesteBlanco);
 }
@@ -249,59 +173,431 @@ body {
   opacity: 1;
 }
 
-
 .header ul li .dropdown-content li {
   text-decoration: none;
   list-style: none;
 }
 
-.main {
-  .inicio {
-    background-image: url(../img/argentina-world.jpg);
-    background-size: cover;
-    background-position: top;
-    height: 100vhd;
-    box-shadow: inset 0 0 0 2000px rgba(84, 84, 84, 0.5);
+.listaNav a {
+  text-decoration: none;
+  color: var(--azulClaro);
+  font-weight: bold;
+  font-size: 0.9rem;
+}
 
-    .titulo_H1 {
-      font-size: 3rem;
-      font-weight: 700;
-      margin-bottom: 15rem;
-    }
+.linkNav {
+  padding: 0.5rem;
+}
 
-    color: white;
-    height: 90vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-    .btn-Registrarse {
-      background-color: var(--azulClaro);
-      color: #ffffff;
-      padding: 0.7rem 1rem;
-      margin: 10px;
-      border-radius: 5px;
-      font-size: 1.5rem;
-      font-weight: 700;
-      text-decoration: none;
-      /* Agregar efecto de botón presionado */
-      transition: transform 0.3s, box-shadow 0.3s;
-      &:hover {
-        background-color: var(--celeste);
-        transform: scale(0.95);
-        box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
-      }
-    }
-
-    .titulo_H3 {
-      font-size: 1rem;
-      font-weight: normal;
-      color: var(--secondary-color);
-      padding: 10px;
-      background-color: rgba(80, 80, 80, 0.5);
-      border-radius: 5px;
-    }
+.listaNav {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  .listaItem {
+    padding: 0.5rem;
+    margin-right: 2rem;
   }
+}
+
+.linkNav.Login {
+  background-color: var(--celeste);
+  color: white;
+  border-radius: 5px;
+  padding: 0.5rem;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.listaNav a:hover {
+  color: var(--azulClaro);
+  transform: scale(0.95);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+  border-radius: 5px;
+  padding: 0.5rem;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+/* Alinea al centro el botón de registrarse */
+/* .card-banner {
+  margin: 0 auto;
+  text-align: center;
+  padding: 0px 100px;
+} */
+
+.input-search {
+  background-color: var(--bg-input-color);
+  border: 2px solid white;
+  border-radius: 25px;
+  color: white;
+  font-size: 16px;
+  height: 50px;
+  margin: 20px 0px;
+  outline: none;
+  padding: 0px 20px;
+  width: 70%;
+  font-family: "Nunito", sans-serif;
+}
+
+.movie-item-detail {
+  bottom: -100%;
+  padding: 30px;
+  max-height: 100%;
+  overflow-y: auto;
+  line-height: 15px;
+  position: absolute;
+  background-color: var(--third-bis-color);
+  box-sizing: border-box;
+  transition: bottom 0.4s ease-in-out;
+  width: 100%;
+}
+
+.movie-item-detail-title {
+  color: white;
+  margin: 5px 0px 0px 0px;
+}
+
+.movie-item-detail-subtitle {
+  color: white;
+  font-size: 8px;
+  margin: 3px 0px;
+}
+
+#top-rated {
+  margin: 50px 0px;
+}
+/* 
+<!-- Info de las películas mismo formato para todas --> */
+.movie-item-v2 {
+  border-radius: 20px;
+  width: 170px;
+  min-width: 170px;
+  font-size: 20px;
+  cursor: pointer;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: 450ms all;
+  -webkit-transform-origin: center left;
+  transform-origin: center left;
+}
+
+.wrapper {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  width: 100%;
+  min-height: calc(150px * 1.5);
+  height: calc(150px * 1.5);
+  overflow: hidden;
+}
+
+.movie-item-img-v2 {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.movie-item-detail-v2 {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.movie-item-detail-title-v2 {
+  color: white;
+  font-weight: bold;
+  margin: 5px 0px 0px 0px;
+}
+
+.movie-item-detail-subtitle-v2 {
+  color: white;
+  font-size: 12px;
+  margin: 3px 0px;
+}
+
+/* CSS 4 - Selectores avanzados y Animaciones. Selectores avanzados. 
+Animaciones con CSS. Incorporación de transformaciones y transiciones
+a elementos. Introducción Responsive Web Design.  --------------------------------*/
+#logo a {
+  text-decoration: none;
+  color: var(--azulClaro);
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+/* Al pasar el cursor sobre el elemento #logo, se activa una
+animación que produce un efecto visual de sacudida y giro
+repetitivo, mejorando la interacción visual cuando se interactúa con ese elemento. */
+#logo:hover {
+  animation: heartbeat 2s infinite;
+}
+
+.btn-Registrarse {
+  background-color: var(--azulClaro);
+  color: #ffffff;
+  padding: 0.5rem 1rem;
+  margin-top: 5rem; 
+  border-radius: 5px;
+  font-size: 1.2rem;
+  font-weight: bolder;
+  text-decoration: none;
+  /* Agregar efecto de botón presionado */
+  transition: transform 0.3s, box-shadow 0.3s;
+  
+}
+
+.btn-Registrarse:hover {
+  background-color: var(--celeste);
+  transform: scale(0.95);
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+}
+
+
+
+
+
+.card-banner h1 {
+  color: #fff;
+  font-size: 3vw;
+  margin-top: 2rem;
+  margin-bottom: 5rem;
+}
+.card-banner h2 {
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-weight: normal;
+  color: var(--secondary-color);
+  padding: 10px;
+  background-color: rgba(80, 80, 80, 0.5);
+  border-radius: 5px;
+}
+
+#popular,
+#top-rated {
+  text-align: center;
+}
+
+#popular h2,
+#top-rated h2 {
+  margin: 30px 0px;
+}
+
+.movie-item {
+  border-radius: 20px;
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  width: 200px;
+  height: 300px;
+  font-size: 20px;
+  cursor: pointer;
+  transition: all 450ms;
+  -webkit-transform-origin: center left;
+  transform-origin: center left;
+}
+
+/* Efecto que ocurre al pasar el cursor sube una ventana en 
+cada imagen de cada película y muestra los detalles */
+.movie-item:hover {
+  opacity: 0.9;
+}
+
+.movie-item:hover .movie-item-detail {
+  bottom: 0;
+}
+*/
+
+/* Agrega una estrella al lado del subtitulo */
+.movie-item-detail-subtitle::after {
+  content: "🌟";
+}
+
+#footer a {
+  color: white;
+  cursor: pointer;
+  font-size: 14px;
+  padding-left: 30px;
+  text-decoration: none;
+}
+
+#footer a:hover {
+  text-decoration: underline;
+  color: var(--secondary-color);
+}
+
+/* Estilos a los nombres de las películas que 
+están en la sección  */
+.movie-item-detail-title-v2:hover {
+  color: var(--primary-color);
+}
+
+/* CSS 5. Flexbox. Media Queries. ¿Qué es Flexbox?
+Propiedades para el contenedor Flex, y los Flex items ---------------------*/
+#footer {
+  align-items: center;
+  background-color: var(--third-color);
+  display: flex;
+  height: 100px;
+  width: 100%;
+}
+
+#search {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* TABLETS */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  h2 {
+    font-size: 3vw;
+  }
+  .login-text {
+    display: none;
+  }
+  .logo-text {
+    display: none;
+  }
+  #banner {
+    height: 400px;
+  }
+  #search {
+    height: 200px;
+  }
+  .container {
+    max-width: 720px;
+  }
+  .card-banner {
+    padding: 0px 75px;
+  }
+
+  #footer {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+/* CELULARES */
+@media screen and (max-width: 767px) {
+  h2 {
+    font-size: 3vw;
+  }
+
+  .h2-subtitle {
+    font-size: 5vw;
+  }
+  .login-text {
+    display: none;
+  }
+  .logo-text {
+    display: none;
+  }
+  #banner {
+    height: 300px;
+  }
+  #search {
+    height: 200px;
+  }
+  .container {
+    max-width: 420px;
+  }
+  .card-banner {
+    padding: 0px 50px;
+  }
+
+  .btn-cac {
+    font-size: 1vh;
+  }
+  #footer {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #footer a {
+    padding: 2px 0px;
+  }
+}
+
+/* Clase Nº6:PLAN DE ESTUDIOS: Grid. Implementación
+de Grid. Maquetado con Flex y Grid. */
+
+nav {
+  margin-left: 40px;
+  margin-right: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  padding: 10px 70px;
+}
+
+.listaNav {
+  display: flex;
+  gap: 30px;
+  list-style: none;
+  padding: 0 4rem;
+}
+
+/* Centra el texto que info sobre películas 
+y series ilimitadas */
+.d-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+/* Se agrega un scroll */
+.movies-scroller {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0px 0px 40px 0px;
+}
+
+.movie-item-v2 {
+  border-radius: 20px;
+  width: 170px;
+  min-width: 170px;
+  font-size: 20px;
+  cursor: pointer;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: 450ms all;
+  -webkit-transform-origin: center left;
+  transform-origin: center left;
+}
+
+.movie-item-detail-v2 {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.movies-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  justify-items: center;
+  row-gap: 20px;
+}
+
+.d-form {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.d-iframe {
+  width: 100%;
 }
