--- a/src/Prueba TP/templates/contacto.html
+++ b/src/Prueba TP/templates/contacto.html
@@ -28,8 +28,10 @@
       <!-- Logo -->
       <div id="logo">
         <a href="/">
-          <i class="fa-solid fa-futbol"></i>
+          <!-- <i class="fa-solid fa-futbol"></i> -->
+          
           <span class="logo-text">CAMPEONES DEL MUNDO</span>
+          <img src="../static/img/Golden-Sta.png" alt="logo Estrellas">
         </a>
       </div>
 
@@ -56,7 +58,10 @@
     </nav>
   </header >
         <main class="main">
-            <section id="form-wrapper">
+
+          <section id="banner" class="d-flex">
+            <div class="card-banner container">
+              <section id="form-wrapper">
                 <form action="#" method="post" novalidate id="form-register">
                     <h2>Registro</h2>
                     <div class="form-control">
@@ -103,6 +108,11 @@
                     </div>
                 </form>
             </section>
+    
+              
+          </section>
+
+           
         </main>
         <footer class="footer-contacto" id="footer">
           <a href="">Términos y condiciones</a>
