--- a/src/Prueba TP/templates/register.html
+++ b/src/Prueba TP/templates/register.html
@@ -28,8 +28,10 @@
       <!-- Logo -->
       <div id="logo">
         <a href="/">
-          <i class="fa-solid fa-futbol"></i>
+          <!-- <i class="fa-solid fa-futbol"></i> -->
+          
           <span class="logo-text">CAMPEONES DEL MUNDO</span>
+          <img src="../static/img/Golden-Sta.png" alt="logo Estrellas">
         </a>
       </div>
 
@@ -56,30 +58,34 @@
     </nav>
   </header >
         <main class="main">
-            <section id="form-wrapper">
+          <section id="banner-register" class="d-flex">
+            <div class="card-banner container">
+              <section id="form-wrapper">
                 <form action="#" method="post" novalidate id="form-register">
                     <h2>Registro</h2>
                     <div class="form-control">
-                        <label for="name">Nombre</label>
-                        <input type="text" name="name" required id="name">
+                        <!-- <label for="name">Nombre</label> -->
+                        <!-- <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre"> -->
+                        <input class="controls" type="text" name="name" required id="name" placeholder="Ingrese su Nombre">
                     </div>
                     <div class="form-control">
-                        <label for="last-name">Apellido</label>
-                        <input type="text" name="last-name" required id="last-name">
+                        <!-- <label for="last-name">Apellido</label> -->
+                        <input class="controls" type="text" name="last-name" required id="last-name" placeholder="Ingrese su Apellido">
                     </div>
                     <div class="form-control">
-                        <label for="email">Email</label>
-                        <input type="email" name="email" required id="email">
+                        <!-- <label for="email">Email</label> -->
+                        <input class="controls" type="email" name="email" required id="email" placeholder="Ingrese su email">
                     </div>
                     <div class="form-control">
-                        <label for="passw">Contraseña</label>
-                        <input type="password" name="name" required id="passw">
+                        <!-- <label for="passw">Contraseña</label> -->
+                        <input class="controls" type="password" name="name" required id="passw " placeholder="Ingrese su Contraseña">
                     </div>
                     <div class="form-control">
                         <label for="date">Fecha de nacimiento</label>
-                        <input type="date" name="date" required id="date">
+                        <input class="controls fecha" type="date" name="date" required id="date">
                     </div>
                     <div class="form-control">
+                      <label for="date">Nacionalidad</label>
                         <select name="country" id="country" class="form-select">
                             <option value="">País</option>
                             <option value="AR">Argentina</option>
@@ -96,13 +102,18 @@
                             <label>Acepto términos y condiciones</label>
                         </div>
                     </div>
-                    <button type="submit">Registrate</button>
-                    <button type="reset">Borrar todo</button>
+                    <button class="btn" type="submit">Registrate</button>
+                    <button class="btn" type="reset">Borrar todo</button>
                     <div class="form-help">
                         <a href="#">¿Necesitas ayuda?</a>
                     </div>
                 </form>
             </section>
+    
+              
+          </section>
+
+           
         </main>
         <footer class="footer-contacto" id="footer">
           <a href="">Términos y condiciones</a>
