--- a/src/Prueba TP/templates/register.html
+++ b/src/Prueba TP/templates/register.html
@@ -23,7 +23,7 @@
       </head>
     <body>
  <!-- Encabezado -->
- <header class="header" id="header">
+ <header class="header" id="header-register">
     <nav>
       <!-- Logo -->
       <div id="logo">
