--- a/src/Prueba TP/templates/iniciar-sesion.html
+++ b/src/Prueba TP/templates/iniciar-sesion.html
@@ -56,53 +56,9 @@
     </nav>
   </header >
         <main class="main">
-            <section id="form-wrapper">
-                <form action="#" method="post" novalidate id="form-register">
-                    <h2>Registro</h2>
-                    <div class="form-control">
-                        <label for="name">Nombre</label>
-                        <input type="text" name="name" required id="name">
-                    </div>
-                    <div class="form-control">
-                        <label for="last-name">Apellido</label>
-                        <input type="text" name="last-name" required id="last-name">
-                    </div>
-                    <div class="form-control">
-                        <label for="email">Email</label>
-                        <input type="email" name="email" required id="email">
-                    </div>
-                    <div class="form-control">
-                        <label for="passw">Contraseña</label>
-                        <input type="password" name="name" required id="passw">
-                    </div>
-                    <div class="form-control">
-                        <label for="date">Fecha de nacimiento</label>
-                        <input type="date" name="date" required id="date">
-                    </div>
-                    <div class="form-control">
-                        <select name="country" id="country" class="form-select">
-                            <option value="">País</option>
-                            <option value="AR">Argentina</option>
-                            <option value="BO">Bolivia</option>
-                            <option value="BR">Brasil</option>
-                            <option value="UY">Uruguay</option>
-                            <option value="CH">Chile</option>
-                            <option value="PY">Paraguay</option>
-                        </select>
-                    </div>
-                    <div class="form-terms">
-                        <div class="terms">
-                            <input type="checkbox" id="terms">
-                            <label>Acepto términos y condiciones</label>
-                        </div>
-                    </div>
-                    <button type="submit">Registrate</button>
-                    <button type="reset">Borrar todo</button>
-                    <div class="form-help">
-                        <a href="#">¿Necesitas ayuda?</a>
-                    </div>
-                </form>
-            </section>
+          <section id="banner-register" class="d-flex">
+
+          </section>
         </main>
         <footer class="footer-contacto" id="footer">
           <a href="">Términos y condiciones</a>
